kubernetes cluster + LGTM/OTEL